[FIX] mail: scrollable message content inside the message bubble
Steps to reproduce:

* Install sale_subscription module
* Open Sales.
* Open any sale order.
* Click Send message → open the full composer.
* Select the template Subscription: Default Email Alert and send it.

  => Observe that the content overflows out of the bubble.

When the email template (message_type = `comment`) has content that is longer
(in width), the content tends to overflow out of the bubble which breaks the UI.

This commit fixes the issue by making the content scrollable inside the bubble.

Task-5363388

closes odoo/odoo#243034

X-original-commit: 948f073a98ab8b74c7aaaca8a9fbaf74cb143547

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -54,7 +54,7 @@
         }
     }
 
-    & > p:last-child {
+    & > p:last-child, .o-mail-Message-richBody > p:last-child {
         margin-bottom: 0 !important;
     }
 
